--- a/_posts/2021-09-13-ml.md
+++ b/_posts/2021-09-13-ml.md
@@ -1,10 +1,13 @@
 ---
-title: Machine Learning - test
+title: ml
 author: jerry
 date: 2021-09-13 21:10:00 +0800
 categories: [Ml]
 tags: [writing]
+mermaid: true
+math: true
 ---
+
 
 <br>
 
