--- a/_posts/2021-09-13-ml.md
+++ b/_posts/2021-09-13-ml.md
@@ -455,13 +455,11 @@ ElasticNet 모델은 릿지와 라쏘를 동시에 충족하는 제약 조건을
 
 ## Reference <br>
 
-- wikipedia - knn &nbsp; : &nbsp;<https://ko.wikipedia.org/wiki/K-%EC%B5%9C%EA%B7%BC%EC%A0%91_%EC%9D%B4%EC%9B%83_%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98> <br>
-- wikipedia - Mean_squared_error &nbsp; : &nbsp;<https://en.wikipedia.org/wiki/Mean_squared_error> <br>
+- [wikipedia] - knn :<https://ko.wikipedia.org/wiki/K-%EC%B5%9C%EA%B7%BC%EC%A0%91_%EC%9D%B4%EC%9B%83_%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98> <br>
+- [wikipedia] - Mean_squared_error :<https://en.wikipedia.org/wiki/Mean_squared_error>
 
 - mizykk &nbsp; : &nbsp;<https://mizykk.tistory.com/102>
 - 테디 노트 &nbsp; : &nbsp;<https://teddylee777.github.io/scikit-learn/scikit-learn-linear-with-regularizations>
-- name &nbsp; : &nbsp;<https://>
-- name &nbsp; : &nbsp;<https://>
 
 
 <br><br>
