--- a/_posts/2021-10-13-BaseCode.md
+++ b/_posts/2021-10-13-BaseCode.md
@@ -25,3 +25,16 @@ long contents .....
 
 ## 2. 폰트 2 
 
+
+
+<!-- 코드라인 -->
+<br>
+<script src="https://utteranc.es/client.js"
+    repo="Jerrykim91/jerrykim91.github.io"
+    issue-term="title"
+    label="😎"
+    theme="github-light"
+    crossorigin="anonymous"
+    async>
+</script>
+<br>
