--- a/_posts/2021-10-13-BaseCode.md
+++ b/_posts/2021-10-13-BaseCode.md
@@ -5,6 +5,9 @@ date: 2021-10-13 09:00:00 +0800
 category: Test
 layout: post
 ---
+<!-- 코드 상단 :  -->
+<a href="https://hits.seeyoufarm.com">
+                        <img align="right" src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https://github.com/Jerrykim91/jerrykim91.github.io"/></a> 
 
 fine
 
@@ -27,7 +30,7 @@ long contents .....
 
 
 
-<!-- 코드라인 -->
+<!-- 코드 하단 -->
 <br>
 <script src="https://utteranc.es/client.js"
     repo="Jerrykim91/jerrykim91.github.io"
