--- a/_posts/2021-10-14-Info.md
+++ b/_posts/2021-10-14-Info.md
@@ -1,18 +1,22 @@
 ---
-title: About Me
+title: About Me😆
 author: jerry
 date: 2021-10-14 09:00:00 +0800
 category: info
 layout: post
 ---
+<!-- 코드 상단 : 방문자 수 확인 -->
+<a href="https://hits.seeyoufarm.com">
+                        <img align="right" src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https://github.com/Jerrykim91/jerrykim91.github.io"/></a> 
 
-# 김효원_Hyowon Kim.
+
+# 🤔김효원_Hyowon Kim.
 
 **안**녕하세요, 데이터 사이언티스트를 꿈꾸는 [김효원](mailto:jerrykim91.pub@gmail.com)입니다. 
 
 <br><br>
 
-## 개인정보.
+## InFo.
 
 ---
 
@@ -36,7 +40,7 @@ e-mail.
 
 🏡부산거주
 
-### Portfolio  및 Github
+## 👩‍💻
 
 ---
 [Portfolio.](https://jerrykim91.github.io/PortfolioPage/)<br>
@@ -59,6 +63,7 @@ e-mail.
 
 - `2021.06.07 ~` **ABH / AI R&D /** 연구원
     - 
+    
 - `2020.10 ~2021.01` **TmaxSoft** / 정책 지원 사업부 / 데이터 라벨러, **인턴**
     - 음성 전사 및 음성 전사 검수
 
