--- a/_posts/2021-10-13-BaseCode.md
+++ b/_posts/2021-10-13-BaseCode.md
@@ -3,6 +3,7 @@ title: Test - How to use.
 author: jerry
 date: 2021-10-13 09:00:00 +0800
 category: Test
+# permalink: '/Test'
 layout: post
 ---
 <!-- 코드 상단 :  -->
