--- a/_posts/2021-10-14-Info.md
+++ b/_posts/2021-10-14-Info.md
@@ -3,6 +3,7 @@ title: About Me😆
 author: jerry
 date: 2021-10-14 09:00:00 +0800
 category: info
+# permalink: '/info'
 layout: post
 ---
 <!-- 코드 상단 : 방문자 수 확인 -->
