--- a/_posts/2021-10-13-BaseCode.md
+++ b/_posts/2021-10-13-BaseCode.md
@@ -1,10 +1,12 @@
 ---
 title: Test - How to use.
-author: jerry
+author: Jerry
 date: 2021-10-13 09:00:00 +0800
 category: Test
 layout: post
 ---
+
+
 <!-- 코드 상단 :  -->
 <a href="https://hits.seeyoufarm.com">
 <img align="right" src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https://github.com/Jerrykim91/jerrykim91.github.io"/></a> 
