--- a/_posts/2021-10-14-Info.md
+++ b/_posts/2021-10-14-Info.md
@@ -1,6 +1,6 @@
 ---
 title: About Me😆
-author: jerry
+author: Jerry
 date: 2021-10-14 09:00:00 +0800
 category: info
 layout: post
@@ -24,21 +24,8 @@ layout: post
 
 ---
 
-생년월일. 
-
-🍰 1991년 12월 14일 
-
-e-mail.  
-
 📨jerrykim91.pub@gmail.com
-
-핸드폰. 
-
- 📞 요청요망
-
-주소. 
-
-🏡부산거주
+🏡부산
 
 ## 👩‍💻
 
@@ -62,7 +49,9 @@ e-mail.
 ---
 
 - `2021.06.07 ~` **ABH / AI R&D /** 연구원
-    - 
+    - 영상처리
+    - ML/DL
+    - 데이터 분석 
     
 - `2020.10 ~2021.01` **TmaxSoft** / 정책 지원 사업부 / 데이터 라벨러, **인턴**
     - 음성 전사 및 음성 전사 검수
