--- a/_posts/2021-10-15-Pandas.md
+++ b/_posts/2021-10-15-Pandas.md
@@ -1,6 +1,6 @@
 ---
 title: Data Analytics - Pandas(판다스)
-author: jerry
+author: Jerry
 date: 2021-10-15 09:00:00 +0800
 category: Data Analytics
 layout: post
