--- a/_posts/2021-10-13-BaseCode.md
+++ b/_posts/2021-10-13-BaseCode.md
@@ -6,7 +6,7 @@ category: Test
 layout: post
 ---
 
-
+<h5><p align="right"> {{ page.date | date_to_string }} </p></h5>
 <!-- 코드 상단 :  -->
 <a href="https://hits.seeyoufarm.com">
 <img align="right" src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https://github.com/Jerrykim91/jerrykim91.github.io"/></a> 
