--- a/_posts/2021-10-14-Info.md
+++ b/_posts/2021-10-14-Info.md
@@ -1,10 +1,12 @@
 ---
-title: About Me😆
+title: About Me🙄
 author: Jerry
 date: 2021-10-14 09:00:00 +0800
 category: info
 layout: post
 ---
+<h5><p align="right"> {{ page.date | date_to_string }} </p></h5>
+
 <!-- 코드 상단 : 방문자 수 확인 -->
 <a href="https://hits.seeyoufarm.com">
                         <img align="right" src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https://github.com/Jerrykim91/jerrykim91.github.io"/></a> 
@@ -24,14 +26,13 @@ layout: post
 
 ---
 
-📨jerrykim91.pub@gmail.com
+📨jerrykim91.pub@gmail.com <br>
 🏡부산
 
-## 👩‍💻
+👩‍💻 [Portfolio.](https://jerrykim91.github.io/PortfolioPage/)<br>
+👩‍💻 [Github.](https://github.com/jerrykim91)
 
----
-[Portfolio.](https://jerrykim91.github.io/PortfolioPage/)<br>
-[Github.](https://github.com/jerrykim91)
+
 
 <br><br>
 
@@ -155,4 +156,4 @@ layout: post
 ---
 
 ~~업데이트 : 06/01/2021~~ <br>
-업데이트 : 06/01/2021
+업데이트 : 11/07/2021
