--- a/_posts/2021-10-13-BaseCode.md
+++ b/_posts/2021-10-13-BaseCode.md
@@ -2,7 +2,7 @@
 title: Test - How to use.
 author: Jerry
 date: 2021-10-13 09:00:00 +0800
-category: Test
+category: Jekyll #Test
 layout: post
 ---
 
