--- a/_posts/2021-10-15-Pandas.md
+++ b/_posts/2021-10-15-Pandas.md
@@ -2,7 +2,7 @@
 title: Pandas(판다스)
 author: Jerry
 date: 2021-10-15 09:00:00 +0800
-category: Data Analytics
+category: Jekyll #Data Analytics
 layout: post
 ---
 
