--- a/_posts/2021-10-14-Info.md
+++ b/_posts/2021-10-14-Info.md
@@ -2,7 +2,7 @@
 title: About Me🙄
 author: Jerry
 date: 2021-10-14 09:00:00 +0800
-category: info
+category: Jekyll #info
 layout: post
 ---
 <h5><p align="right"> {{ page.date | date_to_string }} </p></h5>
