--- a/_posts/2021-10-13-BaseCode.md
+++ b/_posts/2021-10-13-BaseCode.md
@@ -1,5 +1,5 @@
 ---
-title: Test - How to use.
+title: Test Page.
 author: Jerry
 date: 2021-10-13 09:00:00 +0800
 category: Jekyll #Test
@@ -12,7 +12,7 @@ layout: post
 <img align="right" src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https://github.com/Jerrykim91/jerrykim91.github.io"/></a> 
 
 
-
+<!--  내용 시작-->
 TEST
 -------------
 
@@ -28,11 +28,12 @@ long contents .....
 
 이건 어때 ? 
 
-## 2. 폰트 2 
+## 2. TSET 2 
 
+<!-- 내용 끝 -->
+<br>
 
-
-<!-- 코드 하단 -->
+<!-- 코맨트 스크립트 -->
 <br>
 <script src="https://utteranc.es/client.js"
     repo="Jerrykim91/jerrykim91.github.io"
