--- a/_Analysis/2022-04-06-2. Data Visualization.md
+++ b/_Analysis/2022-04-06-2. Data Visualization.md
@@ -1,8 +1,8 @@
 ---
-title: Data Visualization.
+title: 2.Data visualization
 author: Jerry
-date: 2022-03-31 
-category: Data Analytics
+date: 2022-04-06 
+category: Data Analytics #Data Analytics
 layout: post
 ---
 
@@ -10,6 +10,9 @@ layout: post
 <!-- 코드 상단 :  -->
 <a href="https://hits.seeyoufarm.com">
 <img align="right" src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https://github.com/Jerrykim91/jerrykim91.github.io"/></a> 
+
+
+<br>
 
 #### 2. Data Analytics - Data visualization
 
@@ -32,10 +35,11 @@ layout: post
 
 1) 임포트 
 
-    ```py 
-    import matplotlib.pyplot as plt # matplotlib
-    %matplotlib inline              # 같이 선언 해줘야함 
-    ```
+```py 
+import matplotlib.pyplot as plt # matplotlib
+%matplotlib inline              # 같이 선언 해줘야함 
+```
+
 <br>
 
 2) 폰트 성정     
@@ -43,21 +47,21 @@ layout: post
     그래프를 그리다 보면 한글이 많이 깨지는것을 확인 할 수 있다.    
     그렇기 때문에 미연에 방지하고자 미리 코드를 선언하고 들어가도록 하겠다. 
 
-    ```py
-    # 폰트
-    import platform
+```py
+# 폰트
+import platform
 
-    if platform.system() == 'Darwin':    # 맥
-        font_name = 'AppleGothic'
-    elif platform.system() == 'Linux':   # 리눅스
-        font_name = 'NanumGothic'
-    elif platform.system() == 'Windows': # 윈도우
-        font_name = 'Malgun Gothic'
-    else:
-        print('운영체제 적용불가 운영체제 확인 요망')
+if platform.system() == 'Darwin':    # 맥
+    font_name = 'AppleGothic'
+elif platform.system() == 'Linux':   # 리눅스
+    font_name = 'NanumGothic'
+elif platform.system() == 'Windows': # 윈도우
+    font_name = 'Malgun Gothic'
+else:
+    print('운영체제 적용불가 운영체제 확인 요망')
 
-    plt.rc('font', family=font_name)
-    ```
+plt.rc('font', family=font_name)
+```
 
 만약 안되면 본인 컴퓨터에 해당 폰트가 있는지 확인 후 폰트를 설치 하는 방법을 고려 해보기를 바람
 
@@ -72,17 +76,20 @@ layout: post
 4) 색깔  
     -  추가하면 됨
 
-    ```
-    colors = ['r', 'y', 'dodgerblue', 'C2','#3C538D']
+```py
+colors = ['r', 'y', 'dodgerblue', 'C2','#3C538D']
 
-    import random
+import random
 
-    c = ["#"+''.join([random.choice('0123456789ABCDEF') for j in range(6)])]
-    print(c)
+c = ["#"+''.join([random.choice('0123456789ABCDEF') for j in range(6)])]
+print(c)
 
-    ```
+```
 
 <br>
+
+---
+
 
 
 <br>
@@ -135,24 +142,24 @@ plt.show()
 
 ### 방법 1.1
 
-    ```py
-    # define subplot grid
-    fig, axs = plt.subplots(nrows=3, ncols=2, figsize=(15, 12))
-    plt.subplots_adjust(hspace=0.5)
-    fig.suptitle("Daily closing prices", fontsize=18, y=0.95)
+```py
+# define subplot grid
+fig, axs = plt.subplots(nrows=3, ncols=2, figsize=(15, 12))
+plt.subplots_adjust(hspace=0.5)
+fig.suptitle("Daily closing prices", fontsize=18, y=0.95)
 
-    # loop through tickers and axes
-    for ticker, ax in zip(tickers, axs.ravel()):
-        # filter df for ticker and plot on specified axes
-        df[df["ticker"] == ticker].plot(ax=ax)
+# loop through tickers and axes
+for ticker, ax in zip(tickers, axs.ravel()):
+    # filter df for ticker and plot on specified axes
+    df[df["ticker"] == ticker].plot(ax=ax)
 
-        # chart formatting
-        ax.set_title(ticker.upper())
-        ax.get_legend().remove()
-        ax.set_xlabel("")
+    # chart formatting
+    ax.set_title(ticker.upper())
+    ax.get_legend().remove()
+    ax.set_xlabel("")
 
-    plt.show()
-    ```
+plt.show()
+```
 
 
 
@@ -268,6 +275,28 @@ plt.savefig(save_path)
 plt.show()
 ```
 
+##### 참고 <br>
+
+[Matplotlib Tutorial - 파이썬으로 데이터 시각화하기][1]
+
+
+
+
+<br><br>
+
+
+
+## 2. 
+
+<br>
+
+```py
+
+```
+
+<br>
+
+
 
 <br><br>
 
@@ -310,14 +339,6 @@ plt.show()
 
 ## 3. plotly
 
-### Reference <br>
-- Plotly 참고자료_지구과학, GIS, 그리고 원격탐사 블로그 &nbsp; : &nbsp;<http://blog.daum.net/geoscience/1420> <br>
-- Plotly 참고자료_하나씩 점을 찍어 나가며 &nbsp; : &nbsp;<https://dailyheumsi.tistory.com/118> <br>
-
-<br>
-
-[Plotly.Express를 사용한 시각화 : 포괄적 인 가이드](https://ichi.pro/ko/plotly-expressleul-sayonghan-sigaghwa-pogwaljeog-in-gaideu-258792796523351)
-요즘에 가장 뜨고 있는 시각화 모듈이다. 
 
 ```py
 # 설치 
@@ -355,7 +376,7 @@ fig.show()
 
 <br>
 
-공간정보 오픈 프랫폼을 사용하기위해서는 필요함 -> [open api 발급](http://www.vworld.kr/dev/v4api.do)
+공간정보 오픈 프랫폼을 사용하기위해서는 필요함 -> [open api 발급][5]
 
 ```py
 # VworldSatellite, VworldHybrid 타일 추가
@@ -428,7 +449,15 @@ fig.show()
 
 <br>
 
+[Plotly.Express를 사용한 시각화 : 포괄적 인 가이드][2]
+
+요즘에 가장 뜨고 있는 시각화 패키지이다. 
+
+
+<br>
+
 ### 1. plotly
+
 ```py
 
 import plotly.graph_objects as go # or plotly.express as px
@@ -448,6 +477,13 @@ app.layout = html.Div([
 app.run_server(debug=True, use_reloader=False)  # Turn off reloader if inside Jupyter
 ```
 
+
+##### 참고 
+
+[Plotly 참고자료_지구과학, GIS, 그리고 원격탐사 블로그][3]     
+[Plotly 참고자료_하나씩 점을 찍어 나가며][4]
+
+
 <br><br>
 
 ### 2. plt 
@@ -459,19 +495,20 @@ app.run_server(debug=True, use_reloader=False)  # Turn off reloader if inside Ju
 
 ---
 
+<br>
+
+
 ### Reference <br>
 
-[Matplotlib Tutorial - 파이썬으로 데이터 시각화하기](https://wikidocs.net/book/5011)
+[1]:https://wikidocs.net/book/5011
+[2]:https://ichi.pro/ko/plotly-expressleul-sayonghan-sigaghwa-pogwaljeog-in-gaideu-258792796523351
+[3]:http://blog.daum.net/geoscience/1420
+[4]:https://dailyheumsi.tistory.com/118
+[5]:http://www.vworld.kr/dev/v4api.do
 
-[가이드1](https://www.cognitumlab.com/single-post/2017/10/08/The-Art-of-Data-2%ED%9A%8C-%EC%9D%B4%EB%9F%B4-%EB%95%90-%EC%9D%B4%EB%9F%B0-%EA%B7%B8%EB%9E%98%ED%94%84-%EB%8D%B0%EC%9D%B4%ED%84%B0%EC%97%90-%EB%A7%9E%EB%8A%94-%EC%8B%9C%EA%B0%81%ED%99%94-%EB%B0%A9%EB%B2%95)
+- [가이드1](https://www.cognitumlab.com/single-post/2017/10/08/The-Art-of-Data-2%ED%9A%8C-%EC%9D%B4%EB%9F%B4-%EB%95%90-%EC%9D%B4%EB%9F%B0-%EA%B7%B8%EB%9E%98%ED%94%84-%EB%8D%B0%EC%9D%B4%ED%84%B0%EC%97%90-%EB%A7%9E%EB%8A%94-%EC%8B%9C%EA%B0%81%ED%99%94-%EB%B0%A9%EB%B2%95)
+- [가이드2](https://codetorial.net/matplotlib/set_color.html)
 
-[가이드2](https://codetorial.net/matplotlib/set_color.html)
-
-
--https://rfriend.tistory.com/260
-
-- Plotly 참고자료_지구과학, GIS, 그리고 원격탐사 블로그 &nbsp; : &nbsp;<http://blog.daum.net/geoscience/1420> <br>
-- Plotly 참고자료_하나씩 점을 찍어 나가며 &nbsp; : &nbsp;<https://dailyheumsi.tistory.com/118> <br>
 
 <!-- 코맨트 스크립트 -->
 <br>
