--- a/_Analysis/2022-04-06-3. Correlation Analytics.md
+++ b/_Analysis/2022-04-06-3. Correlation Analytics.md
@@ -2,7 +2,7 @@
 title: 3.Correlation Analytics
 author: Jerry
 date: 2022-04-06 
-category: Data Analytics #Data Analytics
+# category: Data Analytics #Data Analytics
 layout: post
 ---
 
@@ -143,7 +143,6 @@ corr
 
 
 <br>
-
 ---
 
 <br>
