--- a/_Analysis/2021-10-15-1.1.Pandas_1.md
+++ b/_Analysis/2021-10-15-1.1.Pandas_1.md
@@ -478,15 +478,7 @@ def read_exel(xlse_path, sheet_Name) :
 
 ## Reference <br>
 
-- HashCode &nbsp; : &nbsp;<https://hashcode.co.kr/questions/493/%EC%97%AC%EB%9F%AC%EA%B0%9C-%EB%AC%B8%EC%9E%90%EB%A5%BC-%EA%B8%B0%EC%A4%80%EC%9C%BC%EB%A1%9C-%EB%AC%B8%EC%9E%90%EC%97%B4%EC%9D%84-%EC%9E%90%EB%A5%B4%EB%8A%94-%EB%B0%A9%EB%B2%95%EC%9D%B4-%EC%9E%88%EB%82%98%EC%9A%94> <br>
-
-<!-- <br>
-<br>
-
-## Practice makes perfect! <br> -->
-
-<!-- - [내용](주소) -->
-
+- HashCode &nbsp; : &nbsp;<https://hashcode.co.kr/questions/493/%EC%97%AC%EB%9F%AC%EA%B0%9C-%EB%AC%B8%EC%9E%90%EB%A5%BC-%EA%B8%B0%EC%A4%80%EC%9C%BC%EB%A1%9C-%EB%AC%B8%EC%9E%90%EC%97%B4%EC%9D%84-%EC%9E%90%EB%A5%B4%EB%8A%94-%EB%B0%A9%EB%B2%95%EC%9D%B4-%EC%9E%88%EB%82%98%EC%9A%94> 
 
 <!-- 코드 하단 -->
 <br>
