--- a/_Web/2022-05-02-web_Ruby.md
+++ b/_Web/2022-05-02-web_Ruby.md
@@ -1,7 +1,7 @@
 ---
-title: web - Linux
+title: web - Ruby
 author: Jerry # 작성자 
-date: 2020-06-27
+date: 2022-05-02
 layout: post
 ---
 
@@ -12,7 +12,10 @@ layout: post
 
 <br>
 
+  
+  
 
+---
   
 <!-- 코드 하단 -->
 <br>
