--- a/_posts/레시피/2030-02-25-사용설명서.md
+++ b/_posts/레시피/2030-02-25-사용설명서.md
@@ -1,7 +1,7 @@
 ---
 title: 사용설명서
 author: Jerry
-date: 2025-02-25
+date: 2030-02-25
 tag: [레시피]
 category: 레시피
 layout: post
@@ -29,3 +29,7 @@ $$f[t][m] = max\{f[t][m], f[t][m-m_{tc}]+f[tc][m_{tc}]\}$$
 ~~~python
 
 ~~~
+
+<!-- 첨례? -->
+[sighingnow][1]
+[1]: 주소
